added footer in html

--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolorem nulla, incidunt harum, itaque odit ducimus explicabo ipsa voluptatibus id eligendi consequatur ipsam. Rerum consequatur sequi aut accusamus enim nulla?</p>
     
+    <footer>
+        <h2>This is the footer of this html document</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore debitis voluptates ad dignissimos quam cupiditate numquam totam. Eos ratione reprehenderit ut temporibus ipsam quis delectus maxime eum, beatae necessitatibus quidem.</p>
+
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non, placeat.</p>
+    </footer>
 </body>
 </html>
